kubernetes/speedtest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: speedtest-chome
spec:
  containers:
  - image: sitespeedio/browsertime
    name: speedtest-chome
    command: ["/start.sh"]
    args: ["https://dr.dk", "-b", "chrome"]    
    volumeMounts:
      - name: azure
        mountPath: /browsertime
  restartPolicy: OnFailure
  volumes:
  - name: azure
    azureFile:
      secretName: azure-secret
      shareName: acishare
      readOnly: false
