kubernetes/ingress-minio.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minio-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - sjkpkube.westeurope.cloudapp.azure.com
    secretName: tls-secret-minio
  rules:
  - host: sjkpkube.westeurope.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: minio
          servicePort: 9000
